# appam

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
appam_macros/: Cargo.toml
appam_macros/src/: lib.rs
docs/: .gitignore  SKILL.md  cli.json  package.json
docs/app/: global.css  layout.tsx
docs/app/(home)/: layout.tsx  page.tsx
docs/app/components/: fade-in.tsx  install-command.tsx  skill-markdown.tsx  word-ticker.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/content/docs/: faq.mdx  index.mdx  meta.json
docs/content/docs/api-reference/: agent-builder.mdx  agent-config-builder.mdx  agent-trait.mdx  anthropic-config.mdx  app-config-builder.mdx  app-config.mdx  caching-config.mdx  chat-message.mdx  closure-tool.mdx  compaction-config.mdx  dynamic-llm-client.mdx  error-handling.mdx  llm-client.mdx  llm-provider.mdx  meta.json  openai-codex-config.mdx  openai-config.mdx  openrouter-config.mdx  prelude.mdx  pricing-usage.mdx  quick-agent.mdx  reasoning-config.mdx  runtime-agent.mdx  session-history.mdx  session.mdx  stream-builder.mdx  stream-consumer.mdx  stream-event.mdx  thinking-config.mdx  toml-agent.mdx  tool-registry.mdx  tool-spec.mdx  tool-trait.mdx  unified-message.mdx  vertex-config.mdx  web-api-routes.mdx
docs/content/docs/core-concepts/: agents.mdx  configuration.mdx  (+5 more)
docs/lib/: build-graph.ts  source.ts
examples/: coding-agent-anthropic.rs  coding-agent-azure-anthropic.rs  coding-agent-azure-openai.rs  coding-agent-bedrock.rs  coding-agent-openai-codex.rs  coding-agent-openai-responses.rs  coding-agent-openrouter-completions.rs  coding-agent-openrouter-responses.rs  coding-agent-vertex.rs  compaction-anthropic.rs  compaction-azure-anthropic.rs  compaction-azure-openai.rs  compaction-bedrock.rs  compaction-openai.rs  stateful-agent.rs
src/: lib.rs  logging.rs  main.rs
src/agent/: builder.rs  config.rs  errors.rs  history.rs  mod.rs  quick.rs  runtime.rs  runtime_agent.rs  streaming.rs  streaming_builder.rs  toml_agent.rs
src/agent/consumers/: callback.rs  channel.rs  console.rs  mod.rs  sqlite_trace.rs  trace.rs
src/config/: builder.rs  mod.rs
src/http/: client_pool.rs  mod.rs
src/llm/: compaction.rs  mod.rs  pricing.rs  pricing_seed.json  provider.rs  unified.rs  usage.rs
src/llm/anthropic/: caching.rs  client.rs  config.rs  convert.rs  mod.rs  rate_limiter.rs  streaming.rs  thinking.rs  tools.rs  types.rs  vision.rs
src/llm/openai/: client.rs  config.rs  convert.rs  mod.rs  streaming.rs  types.rs
src/llm/openai_codex/: auth.rs  client.rs  config.rs  mod.rs
src/llm/openrouter/: completions.rs  config.rs  mod.rs  responses.rs  types.rs
src/llm/vertex/: client.rs  config.rs  convert.rs  mod.rs  types.rs
src/tools/: loader.rs  mod.rs  python.rs  register.rs  registry.rs
src/tools/builtin/: mod.rs
src/web/: fs_operations.rs  middleware.rs  mod.rs  routes.rs  session.rs  state.rs  streaming.rs  trace_models.rs  trace_parser.rs  trace_routes.rs
src/web/static/: trace_visualizer.html
tests/: agent_builder.rs  bedrock_opus46_streaming.rs  continuation_tests.rs  hybrid_config.rs  logging_tracing_history.rs  provider_switching.rs  streaming.rs  test-run-examples.sh  test-run-vertex-model-matrix.sh  tool_macro.rs
tests/fixtures/: models_dev_api.json
(+44 files in other folders)
